--- a/src/styles/primitives/prose.css
+++ b/src/styles/primitives/prose.css
@@ -36,7 +36,12 @@ a.prose-link {
 .prose :where(ul, ol),
 ul.prose-list,
 ol.prose-list {
-  list-style-position: inside;
+  list-style-position: outside;
+  padding-left: var(--space-20);
+}
+
+.prose :where(ul, ol)[data-list="unstyled"] {
+  padding-left: 0;
 }
 
 .prose ul,
@@ -47,11 +52,19 @@ ul.prose-list {
 .prose ul ul,
 ul.prose-list ul {
   list-style-type: circle;
+  margin-top: var(--space-8);
+  padding-left: var(--space-20);
 }
 
 .prose ol,
 ol.prose-list {
   list-style-type: decimal;
+}
+
+.prose ol ol,
+ol.prose-list ol {
+  margin-top: var(--space-8);
+  padding-left: var(--space-20);
 }
 
 .prose :where(ul, ol) li::marker,
